--- a/burger-builder/package.json
+++ b/burger-builder/package.json
@@ -63,6 +63,7 @@
     "react-test-renderer": "^17.0.2",
     "react-thunk": "^1.0.0",
     "redux": "^4.1.0",
+    "redux-saga": "^1.1.3",
     "redux-thunk": "^2.3.0",
     "resolve": "1.18.1",
     "resolve-url-loader": "^3.1.2",
