--- a/React-Practice/nextjs-course/package.json
+++ b/React-Practice/nextjs-course/package.json
@@ -11,8 +11,11 @@
   "dependencies": {
     "mongodb": "^4.0.1",
     "next": "11.0.1",
+    "next-redux-wrapper": "^7.0.2",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "react-redux": "^7.2.4",
+    "redux": "^4.1.0"
   },
   "devDependencies": {
     "@types/react": "17.0.14",
